_sass/components/_c-share.scss
.c-share {

  .l-compare-selectors & {
    display: flex;
    margin-right: rem(20px);
  }

  .link-box {
    position: relative;
    width: 100%;
    margin-top: rem(35px);
    text-align: left;
  }

  .url {
    width: 100%;
    margin-bottom: rem(10px);
    padding: rem(16px) rem(10px);
    font-family: $font-secondary;
    font-size: rem(14px);
    font-style: italic;
    color: #5b5b5b;
    border: rem(1px) solid $beige;

    @include ellipsis-x(100%);

    @media screen and (min-width: $screen-s) {
      width: calc(100% - 21%);
      height: rem(51px);
      margin: 0;
      border-right: 0;
    }

    @media screen and (min-width: 768px) {
      margin: 0;
    }
  }

  .btn-copy {
    width: 100%;
    height: rem(51px);
    font-family: $font-secondary;
    font-size: rem(11px);
    cursor: pointer;

    &.-secondary {
      padding: rem(17px);
    }

    @media screen and (min-width: $screen-s) {
      position: absolute;
      top: 0;
      right: 0;
      width: 21%;
    }
  }
}

